WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113823
Generalize prior line break context state and names.
https://bugs.webkit.org/show_bug.cgi?id=113823
Summary
Generalize prior line break context state and names.
Glenn Adams
Reported
2013-04-02 13:46:20 PDT
In order to better accommodate an expectation of more general state for prior line break context text and to facilitate use of prior context in non-ASCII line break path, change to a fixed UChar array for storage of prior context and change accessors/methods to use better names. This change is to simplify (reduce the size of) the patch proposed for
bug 105692
in order to ease the review and landing process. No behavioral change is introduced, so no new tests are required. Note that it is expected that this prior context state may be further generalized in the future in order to accommodate greater than the last two context characters. This is expected to be required to support Thai (and similar) dictionary based line breaking, where the prior context may consist of an entire word.
Attachments
Patch
(12.77 KB, patch)
2013-04-02 14:33 PDT
,
Glenn Adams
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Glenn Adams
Comment 1
2013-04-02 14:33:54 PDT
Created
attachment 196227
[details]
Patch
WebKit Review Bot
Comment 2
2013-04-02 16:26:57 PDT
Comment on
attachment 196227
[details]
Patch Clearing flags on attachment: 196227 Committed
r147506
: <
http://trac.webkit.org/changeset/147506
>
WebKit Review Bot
Comment 3
2013-04-02 16:27:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug