Generalize prior line break context state and names. https://bugs.webkit.org/show_bug.cgi?id=113823

Reviewed by Darin Adler.

No new tests required due to no behavioral change.

* platform/text/TextBreakIterator.h:
(WebCore::LazyLineBreakIterator::LazyLineBreakIterator):
(WebCore::LazyLineBreakIterator::lastCharacter):
(WebCore::LazyLineBreakIterator::secondToLastCharacter):
(WebCore::LazyLineBreakIterator::setPriorContext):
(WebCore::LazyLineBreakIterator::updatePriorContext):
(WebCore::LazyLineBreakIterator::resetPriorContext):
(WebCore::LazyLineBreakIterator::resetStringAndReleaseIterator):
Store previous characters as prior context buffer used directly
by line break iterator implementation. Rename members to reflect
somewhat more general usage. Also fix bad indentations.
* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutRunsAndFloatsInRange):
(WebCore::RenderBlock::LineBreaker::nextSegmentBreak):
Use renamed line break iterator methods.


Canonical link: https://commits.webkit.org/132175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147506 268f45cc-cd09-0410-ab3c-d52691b4dbfc